MDEV-15966: Behavior for TRUNCATE versioned table is not documented and not covered by tests

* add error for truncation of versioned tables: `ER_TRUNCATE_ILLEGAL_VERS`
* extract reading `extra2` section in function `dd_read_extra2`
* update `dd_frm_type` and `ha_table_exists` signatures: add new parameter `is_versioned`

tests run: main/create, parts/*, versioning/*

[fixes #261]