sql/sql_truncate.cc
@@ -275,6 +275,7 @@ Sql_cmd_truncate_table::handler_truncate(THD *thd, TABLE_LIST *table_ref,
 bool Sql_cmd_truncate_table::lock_table(THD *thd, TABLE_LIST *table_ref,
                                         bool *hton_can_recreate)
 {
+  bool is_versioned;
   TABLE *table= NULL;
   DBUG_ENTER("Sql_cmd_truncate_table::lock_table");
 
@@ -305,6 +306,7 @@ bool Sql_cmd_truncate_table::lock_table(THD *thd, TABLE_LIST *table_ref,
     *hton_can_recreate= ha_check_storage_engine_flag(table->file->ht,
                                                      HTON_CAN_RECREATE);
     table_ref->mdl_request.ticket= table->mdl_ticket;
+    is_versioned = table->versioned();
   }
   else
   {
@@ -318,7 +320,7 @@ bool Sql_cmd_truncate_table::lock_table(THD *thd, TABLE_LIST *table_ref,
       DBUG_RETURN(TRUE);
 
     if (!ha_table_exists(thd, &table_ref->db, &table_ref->table_name,
-                         &hton, &is_sequence) ||
+                         &hton, &is_sequence, &is_versioned) ||
         hton == view_pseudo_hton)
     {
       my_error(ER_NO_SUCH_TABLE, MYF(0), table_ref->db.str,
@@ -339,6 +341,12 @@ bool Sql_cmd_truncate_table::lock_table(THD *thd, TABLE_LIST *table_ref,
     }
     else
       *hton_can_recreate= !is_sequence && hton->flags & HTON_CAN_RECREATE;
+  }
+
+  if (is_versioned)
+  {
+    my_error(ER_TRUNCATE_ILLEGAL_VERS, MYF(0));
+    DBUG_RETURN(TRUE);
   }
 
   /*
